# ctfbot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  PRD-v1.6.md  PRD-v1.7.md  README.md  ctfbot user guide.md  ctfbot.spec  debug_output.txt  docker-compose.yml  findings.md  progress.md  pyproject.toml  task_plan.md  test_astream.py  test_kali_curl.py  test_kali_direct.py  test_kali_simple.py  test_local_llm.py  test_local_llm_requests.py  test_sqlmap_banner.py  test_sqlmap_version.py  user_guide.md  v3_config.yaml  v3_config.yaml.example  v3_deepseek.yaml  v3_deepseek.yaml.example  v3_local.yaml  verify_local_deepseek.py  verify_local_final.py  verify_local_gpt_20b.py
.agent/: swarm_guide.md  task_plan.md
.agent/workflows/: finish-day.md
.github/workflows/: build.yml
data/chroma_db/: chroma.sqlite3
data/knowledge_base/: crypto_classical.md  linux_privesc.md  web_sqli.md
docker/: Dockerfile.fuzzer  Dockerfile.ghidra  Dockerfile.kali
docs/: ctfbot-discuss.md  kali_novnc_setup.md
docs/plans/: 2026-02-06-asas-core-mcp-v1.md  2026-02-06-asas-phase2-tools.md  2026-02-06-asas-phase3-mcp-docker.md  2026-02-07-asas-agent-mvp-design.md  2026-02-07-asas-agent-mvp-implementation.md  2026-02-07-asas-memory-layer-design.md  2026-02-07-asas-memory-layer-implementation.md  2026-02-07-capability-expansion-plan.md  2026-02-07-platform-adaptor-design.md  2026-02-07-readme-and-packaging.md  2026-02-07-v2.0-reverse-ghidra-design.md  2026-02-07-v2.0-reverse-ghidra-docker-plan.md  2026-02-07-v2.5-logic-reasoning-plan.md  2026-02-10-v2.0-react-agent-design.md  2026-02-10-v2.0-react-agent-implementation.md  2026-02-10-v3.0-multi-agent-ctf-system-design.md  2026-02-10-v3.0-multi-agent-ctf-system-implementation.md  2026-02-10-v4.0-deep-tooling-and-reasoning-design.md  2026-02-10-v4.0-implementation.md  2026-02-10-v4.5-ida-pro-integration-design.md  2026-02-10-v4.5-implementation.md  2026-02-12-v5.1-angr-integration-implementation.md  2026-02-12-v5.2-fuzzing-integration-implementation.md  2026-02-12-v5.5-horde-interoperability-implementation.md  2026-02-12-v6.0-distributed-swarm-implementation.md  2026-02-21-zeroclaw-vnc-integration-design.md  2026-02-21-zeroclaw-vnc-integration-implementation.md  2026-02-22-frontend-command-center-design.md  2026-02-22-vnc-native-integration-design.md  (+5 more)
scripts/: install.sh  start_ida_server.sh  start_mcp_server.sh  test_kali_connectivity.py  test_vnc_direct.py  test_web_agent.py  verify_ida_env.py
src/asas_agent/: __main__.py  (+2 more)
tests/: conftest.py  test_mcp_integration.py  test_mcp_memory_integration.py  test_server.py  test_version.py
ui/: package.json  pnpm-lock.yaml
(+154 files in other folders)
